# test-bot-cpp

./: .gitmodules  CMakeLists.txt  Dockerfile  main.cpp  voice_generator.cpp  voice_generator.h
commands/: join.cpp  join.h  leave.cpp  leave.h  ping.cpp  ping.h
